fix: ensure details marker doesn't shrink on flex overflow

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -39,6 +39,8 @@
       &::before {
         display: inline-block;
 
+        flex-shrink: 0;
+
         width: 1rem;
         height: 1rem;
 
